[package]
name = "url-track-cleaner"
version = "0.1.4"
edition = "2021"
license = "MIT"
description = "A simple library for cleaning track elements in urls"
documentation = "https://docs.rs/url-track-cleaner"
repository = "https://github.com/fython/url-track-cleaner-rs"
readme = "README.md"

[feautres]
default = []
serde = ["serde", "serde_json"]

[dependencies]
anyhow = "1.0.82"
regex = "1.10.4"
reqwest = "0.12.3"
serde = { version = "1.0.197", features = ["derive"], optional = true }
serde_json = { version = "1.0.115", optional = true }
tokio = { version = "1.37.0", features = ["full"] }
